# ILA_CCP

./: README.md
Coherence_Verification/: CMakeLists.txt  README.md
Coherence_Verification/app/: main.cc
Coherence_Verification/include/: pmesh_l1_ila.h  pmesh_l2_ila.h
Coherence_Verification/src/: pmesh_l1_ila.cc  pmesh_l2_ila.cc  pmesh_util.cc
Coherence_Verification/verification/: ccp_define.h  ccp_eq_check.py  ccp_eq_check.tcl  ccp_eq_wrapper.v  ccp_fsm.tcl  ccp_l15eq_check.tcl  wrapper_l15.v
Coherence_Verification/verification/ccp_fsm/: ccp_fsm.v  l15.v  l15cmp_mem.py  l15cmp_mem.v  l2.v
Coherence_Verification/verification/ccp_ila/: ccp_ila.v  l15cmp_mem.py  l15cmp_mem_ila.v
L2-Cache-Verification/: CMakeLists.txt  README.md
L2-Cache-Verification/app/: main.cc
L2-Cache-Verification/include/: pmesh_l2_ila.h
L2-Cache-Verification/refinement/: ref-rel-inst-cond-l2.json  ref-rel-var-map-l2.json
L2-Cache-Verification/src/: pmesh_l2_ila.cc  pmesh_util.cc
L2-Cache-Verification/verilog/: l2.v  l2_pipe1.v  l2_pipe1_ctrl.tmp.v  l2_pipe1_dpath.tmp.v  l2_pipe2_buf_in.tmp.v  l2_pipe2_ctrl.tmp.v  l2_pipe2_dpath.tmp.v  l2_state.tmp.v
L2-Cache-Verification/verilog/include/: define.tmp.h  l2.tmp.h
L2-Cache-Verification/verilog/sram_wrappers/: sram_l2_data.tmp.v  sram_l2_dir.tmp.v  sram_l2_state.tmp.v  sram_l2_tag.tmp.v
